# cora

./: .gitignore  .svnignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL.md  LICENSE  README.md  codecov.yml  config.defaults.php  config.defaults.php.in  content.php  coradb-data.sql.in  coradb.sql  coradb.sql.in  error.php.in  gui.php  gui.php.in  index.php  make_with_cmake  mkdocs.yml  news.php  phpunit.xml.dist.in  project_specific_hacks.php  request.php  version.php
CMakeModules/: AddSources.cmake  Cat.cmake  ConfigureAll.cmake  FindMySQL.cmake  FindNaturalDocs.cmake  FindNodeJS.cmake  FindPHP5.cmake  FindPHPUnit.cmake  FindSass.cmake  Findmkdocs.cmake  SetCurrentWebDir.cmake  SetWithCacheBuster.cmake
db/: CMakeLists.txt  common.php  configure_db.php.in  configure_db_cli.php  coradb-data.sql  coradb-data.sql.in  coradb.sql  coradb.sql.in
doc/: CONTRIBUTING.md  cora-guide.tex  cora-xml.dtd  cora-xml.rng  cora.dia  mkdocs.yml  tokenization.odg
gui/: CMakeLists.txt  admin.php  edit.php  file.php  help.php  login.php  menu.php  search.php  settings.php
gui/css/: CMakeLists.txt  Meio.Autocomplete.css  MultiSelect.css  baseBox.css  concatenate.cmake  imagezoom.css  install.scss  mBoxModal.css  mBoxNotice.css  mBoxTooltip.css  mFormElement-Select.css  mForm_mod.css  master.css  myCss.css  print.css  screen.css  screen.scss
gui/js/: CMakeLists.txt  FlexRowList.js  Meio.Autocomplete.js  MultiSelect.js  ProgressBar.js  admin.js  baseBox.js  datepicker.js  dragtable_hack.js  edit.js  file.js  gui.js  main.js  main.login.js  master.js  meta-cora.js  meta-mbox.js  meta-various.js  navigation.js  settings.js  tagset.js  tagsets.js
gui/js/edit/: DataSource.js  DataTable.js  DataTableDropdownMenu.js  DataTableNavigation.js  DataTableProgressBar.js  EditorModel.js  EditorModelUndo.js  FlagHandler.js  HorizontalTextPreview.js  LineJumper.js  PageModel.js  SearchResults.js  TokenSearcher.js
gui/js/lightface/: LightFace.mod.js
gui/js/mbox/: mForm.Core.js
gui/js/mbox/assets/: mBoxModal.css  mBoxNotice.css  mForm_mod.css
gui/js/request/: CoraRequest.js  CoraRequestErrors.js
gui/js/tagsets/: Boundary.js  Comment.js  Lemma.js  LemmaAutocomplete.js  LemmaPOS.js  LemmaSugg.js  Norm.js  NormBroad.js  NormType.js  POS.js  SecondaryComment.js  SplitClassTagset.js  Tagset.js  TagsetFactory.js
lib/: CMakeLists.txt  cfg.php  (+16 more)
src/: CMakeLists.txt  config.defaults.php  error.php.in  gui.php.in  news.php  version.php
src/db/: CMakeLists.txt  configure_db.php.in  configure_db_cli.php  coradb.sql
src/db/migration/: 2-to-3.sql  3-to-4.sql  4-to-5.sql  5-to-6.sql  revert-2-to-3.sql  revert-5-to-4.sql  revert-5-to-6.sql
src/gui/: admin.php  help.php  login.php  search.php
src/gui/css/: CMakeLists.txt  datepicker.css  mBoxCore.css  screen.scss
src/gui/js/: CMakeLists.txt  ErrorHandler.js  FlexRowList.js  admin.js  datepicker.js  file.js  main.login.js  settings.js
src/gui/js/edit/: DataSource.js  DataTableNavigation.js  DataTableProgressBar.js  EditorModel.js  EditorModelUndo.js  LineJumper.js  TokenSearcher.js
src/gui/js/mbox/: mBox.Modal.Confirm.js
src/gui/js/tagsets/: Boundary.js  Lemma.js  LemmaAutocomplete.js  LemmaPOS.js  LemmaSugg.js  SecondaryComment.js  SplitClassTagset.js  Tagset.js  TagsetFactory.js
src/lib/: CMakeLists.txt  automaticAnnotation.php  commandHandler.php  connect.php  documentModel.php  exporter.php  install.php  localeHandler.php  sessionHandler.php  xmlHandler.php
src/lib/annotation/: RFTagger.php
src/lib/connect/: DocumentAccessor.php  DocumentCreator.php  DocumentReader.php  DocumentWriter.php  ProjectAccessor.php  TagsetAccessor.php  TagsetCreator.php
src/lib/random_compat/: CMakeLists.txt
src/locale/: CMakeLists.txt  Locale.de-DE.json  Locale.en-US.json
tests/: AutomaticAnnotator_test.php  AutomaticAnnotator_test.php.in  CMakeLists.txt  Cfg_test.php  Cfg_test.php.in  CoraDocument_test.php  CoraDocument_test.php.in  CoraSessionWrapper_mock.php  DBConnector_test.php  DBInterface_Expensive_test.php  DBInterface_Expensive_test.php.in  DBInterface_test.php  DBInterface_test.php.in  DB_fixture.php  DB_fixture.php.in  DocumentAccessor_mocks.php  DocumentAccessor_test.php  DocumentCreator_test.php  DocumentReader_test.php  Exporter_test.php  Exporter_test.php.in  Locale_test.php  Locale_test.php.in  Menu_test.php  Menu_test.php.in  RequestHandler_login_test.php  TagsetAccessor_test.php  TagsetAccessor_test.php.in  XMLHandler_test.php  XMLHandler_test.php.in  alias_phpunit.php  connect_test.php  cora-importtest.xml  coradb.xml  coratest-setup.sql  coratest-teardown.sql  coratest.sql  dbtest.php  phpunit.xml  phpunit.xml.in  (+2 more)
tests/backend/: AutomaticAnnotator_test.php  CMakeLists.txt  CoraDocument_test.php  DBInterface_test.php  DB_fixture.php  DocumentAccessor_test.php  DocumentCreator_test.php  DocumentReader_test.php  Locale_test.php  RequestHandler_login_test.php  XMLHandler_test.php
tests/backend/data/: XMLHandler_test_expected.xml  cora-importtest.xml  coradb.xml  coratest-innodb.sql  coratest-myisam.sql  created_project.xml  created_user.xml  inserted_document.xml  saved_lines.xml  tagger_output.txt  test_config.php  test_data.php
tests/backend/db_fixture/: README.md  coratest_data.sql  coratest_data.xml  fixture.php
tests/backend/db_fixture/sources/: document.kafka.xml  document.simple.xml  tagset.lemma_sugg.kafka.txt  tagset.norm_type.demo.txt
tests/backend/mocks/: DocumentAccessor_mocks.php  LocaleHandler_mock.php
tests/data/: cora-importtest.xml  coradb.xml  coratest-innodb.sql  coratest-myisam.sql  created_project.xml  created_user.xml  inserted_document.xml  saved_lines.xml  tagger_output.txt  test_config.php  test_data.php  token.xml
tests/db_fixture/: README.md  coratest_data.sql  coratest_data.xml  fixture.php
tests/db_fixture/sources/: document.kafka.txt  document.simple.txt  tagset.lemmapos.demo.txt  tagset.pos.stts.txt
tests/frontend/: CMakeLists.txt  global.js  test.js  test_LineJumper.html.in  test_LineJumper.js  test_tagsets.html.in  test_tagsets.js
tests/mocks/: DocumentAccessor_mocks.php
(+57 files in other folders)
